# sensing_actuation

./: README.md
area_provider/: CMakeLists.txt  README.md  package.xml
area_provider/docs/: manifest.yaml
area_provider/docs/html/: annotated.html  area_8cpp.html  area_8cpp__incl.map  area_8cpp__incl.md5  area_8cpp_source.html  area_8h.html  area_8h__dep__incl.map  area_8h__dep__incl.md5  area_8h__incl.map  area_8h__incl.md5  area_8h_source.html  area__provider_8cpp.html  area__provider_8cpp__incl.map  area__provider_8cpp__incl.md5  area__provider_8cpp_source.html  classarea-members.html  classarea.html  classarea__inherit__graph.map  classarea__inherit__graph.md5  classes.html  classma-members.html  classma.html  classma__inherit__graph.map  classma__inherit__graph.md5  classroi-members.html  classroi.html  classroi__inherit__graph.map  classroi__inherit__graph.md5  classrois-members.html  classrois.html  dir_000001_000002.html  dir_13e138d54eb8818da29c3992edef070a.html  (+74 more)
area_provider/include/lib/: area.h  (+3 more)
area_provider/launch/: area_provider.launch  ma_services.launch  roi_services.launch
area_provider/param/: area.yaml  area_provider.yaml  gps_roi.geojson  gps_roi.plan  ma.yaml  ma_coords.yaml  roi.yaml  simuation_roi.plan
area_provider/src/: area_provider.cpp  ma_services.cpp  roi_services.cpp
area_provider/test/: roi_0.plan  roi_1.plan  roi_2.plan  roi_4.plan  rosconsole.config  test_area.cpp  test_area_local.test  test_area_local.yaml  test_roi.cpp  test_roi.test  test_roi.yaml
asctec_gps/: CMakeLists.txt  README.md  package.xml
asctec_gps/launch/: asctec_gps.launch
asctec_gps/src/: asctec_gps.cpp
asctec_gps/srv/: FixToGpsdata.srv  GpsdataToFix.srv  GpsdataToPose.srv  PoseToGpsdata.srv
asctec_gps/test/: test_asctec_gps.cpp
asctec_pos_controller/: CMakeLists.txt  README.md  package.xml
asctec_pos_controller/launch/: asctec_pos_controller.launch
asctec_pos_controller/param/: asctec_pos_controller_params.yaml
asctec_pos_controller/src/: asctec_pos_controller.cpp
asctec_pos_provider/: CMakeLists.txt  README.md  package.xml
asctec_pos_provider/launch/: asctec_pos_provider.launch
asctec_pos_provider/param/: asctec_pos_provider.yaml
asctec_pos_provider/src/: asctec_pos_provider.cpp
battery_monitor/: .cproject  .project  CMakeLists.txt  package.xml
battery_monitor/launch/: battery_monitor.launch
battery_monitor/param/: battery.yaml
battery_monitor/src/: battery_monitor.cpp
mavros_battery_monitor/: CMakeLists.txt  package.xml
mavros_battery_monitor/include/: mavros_battery_monitor.h
mavros_battery_monitor/include/lib/: battery_monitor.h  battery_simulatior.h
mavros_battery_monitor/launch/: mavros_battery_monitor.launch
mavros_battery_monitor/param/: battery_lut.yaml  charging_points.yaml  mavros_battery_monitor.yaml
mavros_battery_monitor/src/: mavros_battery_monitor.cpp
mavros_battery_monitor/src/lib/: battery_monitor.cpp
mavros_gps/: CMakeLists.txt  README.md  package.xml
mavros_gps/launch/: mavros_gps.launch
mavros_gps/param/: mavros_gps.yaml
mavros_gps/src/: mavros_gps.cpp
mavros_gps/srv/: fix_to_target.srv  pose_to_target.srv  target_to_fix.srv
mavros_gps/test/: fake_gps.cpp  fake_gps.launch  test_mavros_gps.cpp  test_mavros_gps.test
mavros_pos_controller/: CMakeLists.txt  README.md  package.xml
mavros_pos_controller/launch/: mavros_pos_controller.launch
mavros_pos_controller/param/: mavros_pos_controller_params.yaml
mavros_pos_controller/src/: mavros_pos_controller.cpp
mavros_pos_provider/: CMakeLists.txt  README.md  package.xml
mavros_pos_provider/launch/: mavros_pos_provider.launch
mavros_pos_provider/param/: compass_sensor.yaml  mavros_pos_provider.yaml
mavros_pos_provider/src/: mavros_pos_provider.cpp
mavros_vel_controller/: CMakeLists.txt  README.md  package.xml
mavros_vel_controller/launch/: mavros_vel_controller.launch
mavros_vel_controller/param/: mavros_vel_controller_params.yaml
mavros_vel_controller/src/: mavros_vel_controller.cpp
mavros_vel_provider/: CMakeLists.txt  README.md  package.xml
mavros_vel_provider/launch/: mavros_vel_provider.launch
mavros_vel_provider/param/: mavros_vel_provider.yaml
mavros_vel_provider/src/: mavros_vel_provider.cpp
navigation_pos_controller/: CMakeLists.txt  README.md  package.xml
navigation_pos_controller/launch/: navigation_pos_controller.launch
navigation_pos_controller/param/: common_costmap.yaml  global_costmap.yaml  navigation.yaml  navigation_pos_controller.yaml
navigation_pos_controller/src/: navigation_pos_controller.cpp  navigation_pos_controller_action_client.cpp
navigation_pos_provider/: CMakeLists.txt  README.md  package.xml
navigation_pos_provider/launch/: navigation_pos_provider.launch  navigation_pos_provider_sim.launch
navigation_pos_provider/src/: navigation_pos_provider.cpp
navigation_vel_provider/: CMakeLists.txt  README.md  package.xml
navigation_vel_provider/launch/: navigation_vel_provider.launch
navigation_vel_provider/src/: navigation_vel_provider.cpp
obstacle_detection/: CMakeLists.txt  README.md  package.xml
obstacle_detection/launch/: obstacle_detection.launch
obstacle_detection/param/: lidar_sensor.yaml  obstacle_detection.yaml  range_sensor.yaml
obstacle_detection/src/: obstacle_detection.cpp
obstacle_detection/test/: test_angle.cpp  test_sector.cpp
(+28 files in other folders)
